<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:layout_marginTop="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:ems="10"
            android:hint="@string/username" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/createAccount" />

</LinearLayout>